# minecraft_screenshot_parser

./: Cargo.toml  README.md
examples/: detect_map.rs  remove_crosshair.rs
src/: crosshair.rs  lib.rs  map.rs  map_color_correct.rs
